--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "publish:patch": "buidler publish patch"
   },
   "dependencies": {
-    "@aragon/abis": "^1.1.0"
+    "@aragon/abis": "^1.1.0",
+    "@aragon/apps-shared-minime": "^1.0.2",
+    "@aragon/minime": "^1.0.0"
   },
   "devDependencies": {
     "@aragon/buidler-aragon": "^0.2.2",
