--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "publish:patch": "buidler publish patch"
   },
   "dependencies": {
-    "@aragon/abis": "^1.1.0"
+    "@aragon/abis": "^1.1.0",
+    "@aragon/apps-token-manager": "^2.1.0"
   },
   "devDependencies": {
     "@aragon/buidler-aragon": "^0.2.2",
