--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.12.0",
     "regenerator-runtime": "^0.13.2",
     "rxjs": "^6.5.4",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "use-viewport": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
