--- a/package.json
+++ b/package.json
@@ -27,11 +27,17 @@
   "devDependencies": {
     "@aragon/buidler-aragon": "^0.2.6",
     "@aragon/contract-test-helpers": "0.0.1",
-    "@nomiclabs/buidler": "^1.3.3",
+    "@nomiclabs/buidler": "^1.4.3",
+    "@nomiclabs/buidler-ganache": "^1.3.3",
     "@nomiclabs/buidler-etherscan": "^1.3.3",
     "@nomiclabs/buidler-truffle5": "^1.3.3",
     "@nomiclabs/buidler-web3": "^1.3.3",
     "bignumber.js": "^9.0.0",
+    "buidler-extract": "^1.0.0",
+    "buidler-gas-reporter": "^0.1.3",
+    "solidity-coverage": "^0.7.9",
+    "solium": "^1.2.5",
+    "truffle": "^5.1.4",
     "web3": "^1.2.7"
   }
 }
